--- a/project/public/index.html
+++ b/project/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>public</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="/dist/build.js"></script>
-  </body>
+<html>
+	<head>
+		<title>Travel Planner</title>
+	</head>
+	<body>
+		<div id="app">
+			
+			<create-flight-search></create-flight-search>
+		</div>
+
+		<script src="/dist/build.js"></script>
+	</body>
 </html>
