Working on design/aesthetic details.

--- a/project/public/index.html
+++ b/project/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style type="text/css">
+		.background{
+			background-color: #fbfbf2;
+		}
+		</style>
 		<title>Travel Planner</title>
 	</head>
 	<body>
